plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'checkstyle'
    id 'org.ec4j.editorconfig' version '0.0.3'
}

editorconfig {
    excludes = ['build']
}

group = 'com.help'
version = '0.0.1-SNAPSHOT'

compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    testImplementation 'junit:junit:4.13.1'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    // MySQL&JPA
    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    // Lombok
    annotationProcessor 'org.projectlombok:lombok'
    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    // mail
    implementation("org.springframework.boot:spring-boot-starter-mail")
    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'
    // webclient
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    // test 환경 (src/test/java 에서만 사용 가능)
    runtimeOnly 'com.h2database:h2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

checkstyle {
    configFile = file("checkstyles/naver-checkstyle-rules.xml")
    configProperties = ["suppressionFile": "checkstyles/naver-checkstyle-suppressions.xml"]
}

tasks.withType(Checkstyle) {
    reports {
        xml.required = true
        html.required = true
    }
}
